hphp/hack/test/typecheck/reactive/rxshallow_rxlocal_on_interface1.php.exp
File "rxshallow_rxlocal_on_interface1.php", line 15, characters 7-7:
Class B does not correctly implement all required members  (Typing[4203])
File "rxshallow_rxlocal_on_interface1.php", line 15, characters 17-17:
Some members are incompatible with those declared in type A
Read the following to see why:
File "rxshallow_rxlocal_on_interface1.php", line 18, characters 19-20:
Member f1 has the wrong type
File "rxshallow_rxlocal_on_interface1.php", line 10, characters 19-20:
This function is conditionally reactive (condition type: \Rx).
File "rxshallow_rxlocal_on_interface1.php", line 18, characters 19-20:
This function is non-reactive.
